--- a/client/style.css
+++ b/client/style.css
@@ -81,8 +81,8 @@ body {
 }
 
 .profile img {
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -90,7 +90,8 @@ body {
   flex: 1;
 
   color: #e2e0f8;
-  font-size: 20px;
+  font-size: 30px;
+  font-family: "Times New Roman";
 
   max-width: 100%;
   overflow-x: scroll;
